# jayhind-ocr-service

./: .env.example  .gitignore  Dockerfile  README.md  launch.py  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  server.py
app/: __init__.py  config.py  container.py  extractor.py  main.py  models.py  reading_order.py
app/api/: __init__.py  routes.py  schemas.py
app/confidence/: __init__.py  scorer.py
app/domain/: __init__.py  interfaces.py  models.py  pipeline_types.py
app/extraction/: __init__.py  json_utils.py  llm_extractor.py  prompt.py  rules_extractor.py
app/ingestion/: __init__.py  document_loader.py
app/layout/: __init__.py  layout_analyzer.py
app/ocr/: __init__.py  null_reader.py  paddle_ocr_reader.py  paddle_vl_reader.py  rapidocr_reader.py  reading_order.py
app/persistence/: __init__.py  artifact_repository.py
app/pipeline/: __init__.py  errors.py  orchestrator.py
app/preprocessing/: __init__.py  image_preprocessor.py
app/rules/: __init__.py  dates.py  gst.py  invoice_rules.py  (+1 more)
colab/: vl_server.py
scripts/: benchmark.py  download_models.sh  install.sh  loadtest.py  serve.sh
tests/: ACCURACY_BASELINE.md  accuracy_report.py  conftest.py  make_fixtures.py  make_layout_fixtures.py  test_api.py  test_confidence.py  test_dates.py  test_document_loader.py  test_extract_api.py  test_gst.py  test_invoice_rules.py  test_json_utils.py  test_layout_analyzer.py  test_numeric.py  test_pipeline.py  test_preprocess.py  test_preprocessing.py  test_reading_order.py  test_rule_processor.py  test_structuring.py
(+10 files in other folders)
